--- a/style.css
+++ b/style.css
@@ -257,15 +257,14 @@ body {
 }
 
 .btn.generate-btn {
-  margin-top: 30px;
-  margin-bottom: 10px;
+  margin-top: 50px;
   width: 100%;
   max-width: 420px;
   background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
   display: block;
   margin-left: auto;
   margin-right: auto;
-  padding: 16px 28px;
+  padding: 16px 30px;
   font-size: 1.2rem;
   font-weight: 700;
   border-radius: 16px;
@@ -289,12 +288,6 @@ body {
   /* background: linear-gradient(135deg, #764ba2 0%, #667eea 100%); */
 }
 
-#timetableGenStatus {
-  text-align: center;
-  font-size: 1rem;
-  font-weight: 500;
-}
-
 /* Tabs Section */
 .tabs {
   background: linear-gradient(135deg, #ffffff 0%, #f8fafc 100%);
@@ -305,7 +298,7 @@ body {
   flex-wrap: wrap;
   gap: 10px;
   padding: 1px;
-  border-radius: 18px;
+  border-radius: 14px;
 }
 
 .tab {
@@ -315,7 +308,7 @@ body {
   width: 100%;
   flex: 1 1 120px;
   border: none;
-  border-radius: 18px;
+  border-radius: 14px;
   cursor: pointer;
   font-weight: 500;
   transition: all 0.3s ease;
@@ -325,8 +318,9 @@ body {
 
 .tab.active {
   background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  /* background-color: #fff; */
   color: white;
-  box-shadow: 0 4px 12px rgba(102, 126, 234, 0.3);
+  /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04); */
 }
 
 /* Timetable section */
@@ -670,6 +664,12 @@ body {
   gap: 8px;
 }
 
+.department-card-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 /* Room List */
 .room-list {
   max-height: 300px;
@@ -887,11 +887,6 @@ body {
   color: #666;
   margin-bottom: 32px;
   line-height: 1.5;
-}
-
-.placeholder-content .btn-container {
-  display: flex;
-  justify-content: center;
 }
 
 .placeholder-content .btn {
